<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.suedinym.androidskillsshowcase.authenticator.LoginActivity"
    android:background="@drawable/linear_gradient_lt_dk">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height= "200dp"
        android:id="@+id/loginImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:background="@drawable/radial_gradient"
        android:contentDescription="@string/android_logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:maxLength="30"
        android:hint="@string/user_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:maxLength="20"
        android:hint="@string/password"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_check"
        android:id="@+id/rememberMeCheckBox"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:buttonTint="@color/opaque_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:id="@+id/forgotPasswordTextView"
        android:layout_below="@+id/rememberMeCheckBox"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/buttonSignUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/opaque_background"
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@+id/passwordEditText"
        android:layout_toStartOf="@+id/passwordEditText"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/forgotPasswordTextView"
        android:layout_toEndOf="@+id/forgotPasswordTextView"
        android:background="@color/opaque_background"
        android:textColor="@android:color/white"/>

</RelativeLayout>
